# propstore

./: .claude_semantic_contract_review.txt  .claude_test_all_streams.txt  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  EXPLORATION_NOTES.txt  FINAL_SUMMARY.txt  PLAN.md  README.md  TODO.md  agent-papers.md  agm-papers.md  algorithms.md  code-review.md  concept-registry-schema.yaml  id-papers.md  notes-2026-03-21.md  notes-alchourron-retrieval.md  notes-algorithm-claims.md  notes-analyst-final-review.md  notes-architecture-review-2026-03-21.md  notes-bondarenko-1997-retrieval.md  notes-bps-processing.md  notes-buneman-2001-retrieval.md  notes-caminada-amgoud-2007.md  notes-cayrol-2005-session.md  notes-charwat2015.md  notes-claims-extraction-2026-03-22.md  notes-claims-extraction-5papers.md  notes-claims-extraction-6papers.md  notes-claims-extraction-session.md  notes-claims-extraction-tms.md  notes-code-review-argumentation.md  notes-code-review-core.md  notes-code-review-semantic.md  notes-code-review-session.md  notes-code-review-tests.md  notes-commit-session.md  notes-composition-analysis-2.md  (+78 more)
.ropeproject/: history  history.json
claims/: test_paper_alpha.yaml  test_paper_beta.yaml
compiler/: build_sidecar.py  cel_checker.py  conflict_detector.py  description_generator.py  form_utils.py  graph_export.py  parameterization_groups.py  propagation.py  sensitivity.py  sympy_generator.py  validate.py  validate_claims.py  world_model.py  z3_conditions.py
concepts/: asymmetry_coefficient.yaml  contact_quotient.yaml  excitation_strength.yaml  focalization.yaml  fundamental_frequency.yaml  glottal_formant_frequency.yaml  h1_h2_difference.yaml  harmonic_richness_factor.yaml  normalized_amplitude_quotient.yaml  open_quotient.yaml  peak_glottal_flow.yaml  rd_parameter.yaml  return_phase_time_constant.yaml  spectral_tilt_cutoff_frequency.yaml  speed_quotient.yaml  subglottal_pressure.yaml  task.yaml  voice_source.yaml
design-spikes/: fant_1985_claims.yaml  henrich_2003_claims.yaml  klatt_1980_claims.yaml
docs/: af-revision.md  algorithm-comparison.md  application-layer-and-undo.md  argumentation-package-boundary.md  argumentation-package-readme.md  argumentation.md  atms.md  belief-set-revision.md  bipolar-argumentation.md  cel-typed-expressions.md  cli-reference.md  conflict-detection.md  contexts-and-micropubs.md  data-model.md  defeasibility-semantics-decision.md  epistemic-operating-system.md  event-semantics.md  fragility.md  gaps.md  git-backend.md  ic-merge.md  integration.md  justifiable-exceptions.md  lemon-concepts.md  parameterization.md  probabilistic-argumentation.md  provenance.md  python-api.md  qualia-and-proto-roles.md  render-policy.md  semantic-artifact-families.md  semantic-merge.md  structured-argumentation.md  subjective-logic.md  units-and-forms.md  worldlines.md
forms/: acceleration.yaml  amount.yaml  amplitude_ratio.yaml  area.yaml  category.yaml  charge.yaml  dimensionless_compound.yaml  duration_ratio.yaml  electric_current.yaml  electric_potential.yaml  energy.yaml  flow.yaml  flow_derivative.yaml  force.yaml  frequency.yaml  gravitational_param.yaml  level.yaml  mass.yaml  molar_energy_per_temperature.yaml  momentum.yaml  pressure.yaml  structural.yaml  time.yaml  velocity.yaml
notes/: aspic-perf-fix.md  aspic-perf-investigation.md  aspic-phase2-green.md  aspic-phase3-green-session.md  aspic-phase4-green-session.md  aspic-phase5-green-session.md  aspic-phase5-red-session.md  aspic-phase6-green-session.md  aspic-phase6-red-session.md  atms-composition-literature-scout.md  audit-architecture.md  audit-aspic-structured.md  audit-atms-world.md  audit-code-vs-literature-2026-03-26.md  audit-dung-semantics.md  audit-error-handling.md  audit-lit-vs-code-2026-03-25.md  audit-opinion-algebra.md  audit-praf-probabilistic.md  audit-remediation-progress.md  audit-synthesis-2026-03-24.md  audit-test-results.md  audit-test-suite-summary.md  audit-z3-cel-conflict.md  backward-chaining-impl.md  code-deep-read.md  epistemic-os-old-surface-enumeration-2026-04-25.md  epistemic-os-ws0-baseline-2026-04-25.md  gap-papers-batch-2026-03-24.md  heartwood-review-2026-03-25.md  hypothesis-aspic-feasibility-scout.md  infrastructure-deep-read.md  ist-workstream-baseline-2026-05-01.md  iter1-red-b-session.md  iter1-red-c-cache-tests.md  iter2-green-g-session.md  iter3-green-j-session.md  iter3-red-k-pdefeats.md  iter3-red-l-session.md  iter4-red-m-proposals.md  (+177 more)
papers/: index.md  out  tags.yaml
plans/: active-claim-runtime-typing-workstream-2026-04-09.md  argumentation-package-extraction-workstream-2026-04-18.md  argumentation-package-second-pass-workstream-2026-04-18.md  artifact-boundary-convergence-workstream-2026-04-13.md  artifact-document-schema-convergence-workstream-2026-04-14.md  artifact-store-workstream-2026-04-13.md  aspic-dung-performance-plan.md  belief-set-package-extraction-workstream-2026-05-01.md  cel-registry-hardening-workstream-2026-04-14.md  cel-subsystem-unification-plan-2026-04-08.md  cel-typed-expression-workstream-2026-04-16.md  claim-concept-link-convergence-workstream-2026-04-24.md  clean-architecture-cutover-workstream-2026-04-17.md  concept-canonical-typing-workstream-2026-04-09.md  condition-registry-convergence-2026-07-21.md  conflict-detector-parameterization-cleanup-workstream-2026-04-13.md  context-lifting-argumentation-gunray-workstream-2026-05-02.md  datalog-conformance-suite-2026-04-10.md  dead-scaffolding-deletion-2026-05-30.md  declarative-claim-validation-workstream-2026-04-18.md  defeasible-logic-integration-remediation-plan-2026-04-12.md  defeasible-reasoning-workstream-2026-04-14.md  delete-directory-loaders-cutover-workstream-2026-04-18.md  document-schema-msgspec-workstream-2026-04-09.md  epistemic-os-workstreams-2026-04-25.md  equation-comparison-direct-cutover-workstream-2026-04-13.md  family-lifecycle-kernel-2026-05-25.md  full-suite-failure-inventory-2026-03-29.md  generic-payload-slot-removal-workstream-2026-04-10.md  generic-typed-tree-loader-and-claim-file-convergence-workstream-2026-04-16.md  (+55 more)
proposals/: fragility-plan.md  (+14 more)
(+4461 files in other folders)
