[project]
name = "propstore"
version = "0.3.3"
description = "Propositional knowledge store compiler"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "linkml>=1.9.3,<1.10",
    "msgspec>=0.19.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "lark>=1.2.2",
    "cel-parser @ git+https://github.com/ctoth/cel-parser.git@96fc4808ef78257ea03549e6298629a9583865c8",
    "sympy>=1.14.0",
    "z3-solver>=4.12",
    "graphviz>=0.20",
    "ast-equiv @ git+https://github.com/ctoth/ast-equiv@b7423889daef74154193317099ae9992ecbcd958",
    "formal-argumentation @ git+https://github.com/ctoth/argumentation.git@90dcbe29895337d593dfc681f2a60bfe8cb71718",
    "bridgman @ git+https://github.com/ctoth/bridgman@5eb6118bb2e346122aae6f7e3e9cd8581ec6c781",
    "pint>=0.25.3",
    "dulwich>=1.1.0",
    "gunray @ git+https://github.com/ctoth/gunray.git@a06da9c06a8c20262edec56f8a1f55dc1901781d",
    "quire @ git+https://github.com/ctoth/quire@c5d348cf3c3ce4c87ceabadd33fe646a7710ece6",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "linkml-runtime>=1.9.3,<1.10",
    "formal-belief-set @ git+https://github.com/ctoth/belief-set@d958095ac70db88c26feb1db7798b4dd1b9d5976",
    "rfc8785>=0.1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "litellm>=1.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
pks = "propstore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["propstore"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
strict = [
    "propstore/core/literal_keys.py",
    "propstore/core/labels.py",
    "propstore/core/graph_types.py",
    "propstore/core/results.py",
    "propstore/conflict_detector/models.py",
    "propstore/opinion.py",
]

[tool.pytest.ini_options]
# Hypothesis profiles: HYPOTHESIS_PROFILE=overnight for thorough runs (see tests/conftest.py)
timeout = 300
timeout_method = "thread"
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
    "e2e: minimally mocked end-to-end workflow tests",
    "migration: temporary migration or cutover protection tests",
    "slow: intentionally slow tests or suites",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "rope>=1.14.0",
    "libcst>=1.8.6",
    "import-linter>=2.11",
    "httpx>=0.28.1",
]
