[project]
name = "propstore"
version = "0.3.3"
description = "Propositional knowledge store compiler"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "linkml>=1.9.3,<1.10",
    "msgspec>=0.19.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "lark>=1.2.2",
    "cel-parser @ git+https://github.com/ctoth/cel-parser.git@96fc4808ef78257ea03549e6298629a9583865c8",
    "sympy>=1.14.0",
    "z3-solver>=4.12",
    "graphviz>=0.20",
    "ast-equiv @ git+https://github.com/ctoth/ast-equiv@b7423889daef74154193317099ae9992ecbcd958",
    "eq-equiv @ git+https://github.com/ctoth/eq-equiv@9ea5dae4eac7f21cc288c841dcaafc5a1ad199d6",
    "human-to-sympy @ git+https://github.com/ctoth/human-to-sympy@f9d67dd54cb1e5e1c0ef9d67094606eb3497cfd7",
    "formal-argumentation @ git+https://github.com/ctoth/argumentation.git@7bc7fb7ab8d7f49e9c835245ef14d7dd5278f0ef",
    "assignment-selection @ git+https://github.com/ctoth/assignment-selection.git@d8554962eee40b73dd8444f6361a72b9b9f95d86",
    "doxa @ git+https://github.com/ctoth/doxa.git@8ba6968f3c40c963786fae504a1719b02b2d17d0",
    "bridgman @ git+https://github.com/ctoth/bridgman@5eb6118bb2e346122aae6f7e3e9cd8581ec6c781",
    "pint>=0.25.3",
    "dulwich>=1.1.0",
    "gunray @ git+https://github.com/ctoth/gunray.git@a06da9c06a8c20262edec56f8a1f55dc1901781d",
    "quire",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "linkml-runtime>=1.9.3,<1.10",
    "formal-belief-set @ git+https://github.com/ctoth/belief-set@2c7dd76dd88ecd39400a6b7380d68407e69f55e8",
    "provenance-semiring @ git+https://github.com/ctoth/provenance-semiring.git@64ecbb919d86cb3cef3fcfbb153cd4b6432c53a8",
    "condition-ir @ git+https://github.com/ctoth/condition-ir.git@d12de46849fd9465cf26bdf7b18cd9d2ee4c00aa",
    "causal-models @ git+https://github.com/ctoth/causal-models@21d6b1e341c42ae4db57309bab48f1994a9d734f",
    "rfc8785>=0.1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "litellm>=1.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
pks = "propstore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["propstore"]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# Hypothesis profiles: HYPOTHESIS_PROFILE=overnight for thorough runs (see tests/conftest.py)
timeout = 300
timeout_method = "thread"
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
    "e2e: minimally mocked end-to-end workflow tests",
    "migration: temporary migration or cutover protection tests",
    "slow: intentionally slow tests or suites",
]

[tool.uv.sources]
quire = { git = "https://github.com/ctoth/quire", rev = "73ef7a57eca84d337da321f0b07af4386d124baf" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "rope>=1.14.0",
    "libcst>=1.8.6",
    "import-linter>=2.11",
    "httpx>=0.28.1",
]
