[project]
name = "propstore"
version = "0.3.3"
description = "Propositional knowledge store compiler"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "msgspec>=0.19.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "lark>=1.2.2",
    "cel-parser @ git+https://github.com/ctoth/cel-parser.git@96fc4808ef78257ea03549e6298629a9583865c8",
    "sympy>=1.14.0",
    "z3-solver>=4.12",
    "graphviz>=0.20",
    "ast-equiv @ git+https://github.com/ctoth/ast-equiv@b7423889daef74154193317099ae9992ecbcd958",
    "eq-equiv @ git+https://github.com/ctoth/eq-equiv@9ea5dae4eac7f21cc288c841dcaafc5a1ad199d6",
    "human-to-sympy @ git+https://github.com/ctoth/human-to-sympy@f9d67dd54cb1e5e1c0ef9d67094606eb3497cfd7",
    "formal-argumentation @ git+https://github.com/ctoth/argumentation.git@3ff70f3d824a27fc03eb50d3dc128e9c2dc14e05",
    "assignment-selection @ git+https://github.com/ctoth/assignment-selection.git@d8554962eee40b73dd8444f6361a72b9b9f95d86",
    "doxa @ git+https://github.com/ctoth/doxa.git@404bf384f5dbbb7a8025baf86b6e7eaf10fd471c",
    "bridgman @ git+https://github.com/ctoth/bridgman@5eb6118bb2e346122aae6f7e3e9cd8581ec6c781",
    "pint>=0.25.3",
    "dulwich>=1.1.0",
    "gunray @ git+https://github.com/ctoth/gunray.git@df4580e1f4c3671159e057ade6d1411512196808",
    "quire",
    "sqlalchemy>=2.0",
    "sqlalchemy-fts5",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "formal-belief-set @ git+https://github.com/ctoth/belief-set@c31e5b8bd3d5005b68134fcaaf7b0fb4608d5ed8",
    "provenance-semiring @ git+https://github.com/ctoth/provenance-semiring.git@5c8c1c86d9ccc531e809ca47b196e6cf7ebc97bb",
    "condition-ir @ git+https://github.com/ctoth/condition-ir.git@f24c42122e8a9ad39073db4801be78053d0ad55f",
    "causal-models @ git+https://github.com/ctoth/causal-models@21d6b1e341c42ae4db57309bab48f1994a9d734f",
    "calibration @ git+https://github.com/ctoth/calibration@aa8e0625d41108cec245eead06cfbba847cc0458",
    "rfc8785>=0.1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "litellm>=1.0",
    "sqlite-vec>=0.1",
]

[project.scripts]
pks = "propstore.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["propstore"]

[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
# Hypothesis profiles: HYPOTHESIS_PROFILE=overnight for thorough runs (see tests/conftest.py)
timeout = 300
timeout_method = "thread"
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
    "e2e: minimally mocked end-to-end workflow tests",
    "migration: temporary migration or cutover protection tests",
    "slow: intentionally slow tests or suites",
]

[tool.uv.sources]
quire = { git = "https://github.com/ctoth/quire", rev = "9f9d9ff155b482e139011969ae73fc603c5e4ff5" }
sqlalchemy-fts5 = { git = "https://github.com/ctoth/sqlalchemy-fts5", rev = "ac6d05968f2f3bcf61c20a09efa41de4a605560d" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.0",
    "rope>=1.14.0",
    "libcst>=1.8.6",
    "import-linter>=2.11",
    "httpx>=0.28.1",
]
